--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1252,7 +1252,7 @@ textarea:focus, input:focus {
       margin: 11px;
       display: inline-block;
 
-      &:active {
+      &.active {
         background-color: #1A5A4C;
       }
     }
@@ -1262,14 +1262,14 @@ textarea:focus, input:focus {
     background-color: #1A5A4C;
   }
 
-  .slider figure {
+  .slider .slider__container {
     position: relative;
     width: 500%;
     margin: 0;
     left: 0;
   }
 
-  .slider figure img {
+  .slider .slider__container img {
     float: left;
     width: calc(10% - 10px);
     height: 543px;
@@ -1281,7 +1281,7 @@ textarea:focus, input:focus {
   .slider {
     display: block;
     justify-content: center;
-    width: 100vw;
+    width: 90vw;
     overflow-x: hidden;
     margin: 30vw auto 0;
 
@@ -1293,8 +1293,8 @@ textarea:focus, input:focus {
 
     &__container {
       height: 135vw;
-      width: 95%;
-      margin: 0 0 0 6vw;
+      width: 100%;
+      margin: 0;
       overflow: hidden;
     }
 
@@ -1310,33 +1310,31 @@ textarea:focus, input:focus {
       background-color: #E0E0E0;
       border-radius: 50%;
       margin: 11px;
-      display: inline-block;
+      display: block;
+      cursor: pointer;
 
-      &:active {
+      &.active {
         background-color: #1A5A4C;
       }
     }
   }
 
-  .btn1 {
-    background-color: #1A5A4C;
+  .mySlides {
+    display: none;
   }
 
   .slider figure {
     position: relative;
-    width: 490vw;
-    margin: 0 0 0 2vw;
-    left: 0;
+    width: 100%;
+    margin: 0 0 0 0;
     // animation: 2s slider infinite;
   }
 
-  .slider figure img {
-    float: left;
-    width: calc(19% - 1vw);
-    height: 135vw;
-    margin-right: 1vw;
-    margin-left: 0;
+  .slider .slider__container img {
+    margin: 0 auto;
+    width: auto;
+    height: 100%;
     object-fit: contain;
-    object-position: left;
+    object-position: center;
   }
 }
