prod_02_opacity_100%_to_1

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -322,7 +322,7 @@ a:active {
   height: 233px;
   width: 100vw;
   background-color: #1a5a4c;
-  opacity: 100%;
+  opacity: 1;
   grid-column-gap: 30px;
   padding-top: 47px;
   padding-bottom: 35px;
