prod_02.1_testing_opacity_bug_on_git

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -341,7 +341,7 @@ a:active {
   &__shade {
     height: 100%;
     background-color: #18181a;
-    opacity: 50%;
+    opacity: 0.5;
   }
 
   @media (min-width: 690px) and (max-width: 1245px) {
