--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -33,6 +33,8 @@
     line-height: 100%; /* 45px */
     margin: 250px 0 auto;
 
+    @include transform;
+
     @include onTablet {
       text-align: left;
       margin: 40px 0 0;
