--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -107,6 +107,7 @@
     height: 50px;
     background-color: #f14a27;
     cursor: pointer;
+    border: 0;
 
     @include onTablet {
       margin-left: 16px;
