--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   min-width: 320px;
-  scroll-behavior: smooth;
 
   &:has(.page__menu:target) {
     overflow: hidden;
@@ -33,4 +32,8 @@
     background-color: $black-opacity;
     opacity: 0.5;
   }
+}
+
+.html {
+  scroll-behavior: smooth;
 }
