--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -45,6 +45,14 @@
     @include onMobile {
       justify-content: left;
     }
+
+    @include onTablet {
+      justify-content: space-between;
+    }
+
+    @include onDesktop {
+      justify-content: space-between;
+    }
   }
 
   &__form-field {
@@ -63,12 +71,18 @@
 
     @include onMobile {
       width: 230px;
-      height: 50px  ;
+      height: 50px;
       padding: 18px 24px;
     }
 
     @include onTablet {
       width: 374px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      width: 470px;
+      height: 70px;
     }
   }
 }
