--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -10,6 +10,20 @@
       justify-content: space-between;
       margin-bottom: 40px;
     }
+
+    @include onTablet {
+      display: grid;
+      height: 149px;
+    }
+
+    @include onDesktop {
+      display: grid;
+    }
+  }
+
+  &__link {
+    // height: 134px;
+    box-sizing: border-box;
   }
 
   &__logo {
@@ -17,6 +31,14 @@
 
     @include onMobile {
       margin-bottom: 0;
+    }
+
+    @include onTablet {
+      margin-bottom: 62px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 62px;
     }
   }
 
@@ -28,6 +50,14 @@
 
     @include onMobile {
       gap: 20px;
+    }
+
+    @include onTablet {
+      gap: 32px;
+    }
+
+    @include onDesktop {
+      gap: 22px;
     }
   }
 
@@ -67,6 +97,16 @@
       gap: 10px;
     }
 
+    @include onTablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @include onDesktop {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
     &-text {
       color: $c-black-text;
       font-family: IBM Plex Sans, sans-serif;
@@ -82,7 +122,7 @@
   }
 
   &__contacts {
-    grid-column: 2;
+    // grid-column: 2;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
