--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,6 @@
 .page {
-  // max-width: 100%;
-  // overflow-x: hidden;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 
   &__body {
     position: relative;
@@ -67,6 +67,14 @@
       font-size: 36px;
       text-align: center;
       margin-bottom: 40px;
+    }
+
+    @include onTablet {
+      text-align: left;
+    }
+
+    @include onMobile {
+      text-align: left;
     }
 
     &--gallery {
