--- a/src/styles/blocks/information.scss
+++ b/src/styles/blocks/information.scss
@@ -34,6 +34,27 @@
       grid-template-columns: 170px 170px;
       gap: 30px;
     }
+
+    &--footer {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      @include onMobile {
+        display: flex;
+      }
+
+      @include onTablet {
+        display: block;
+        gap: 38px;
+      }
+
+      @include onDesktop {
+        display: block;
+        gap: 30px;
+      }
+
+    }
   }
 
   &__working-hours {
@@ -57,6 +78,14 @@
 
     &--footer {
       color: $c-black-text;
+
+      @include onTablet {
+        margin-bottom: 64px;
+      }
+
+      @include onMobile {
+        margin-bottom: 70px;
+      }
     }
 
     // @include onMobile {
