--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -50,9 +50,38 @@
 
     @include hover(scale, 105%);
 
+    @include onMobile {
+      width: 50px;
+      height: 50px;
+    }
+
     @include onTablet {
       width: 70px;
       height: 70px;
+    }
+
+    @include onDesktop {
+      width: 70px;
+      height: 70px;
+    }
+
+    &--contacts {
+      background-color: $c-red;
+
+      @include onMobile {
+        width: 50px;
+        height: 50px;
+      }
+
+      @include onTablet {
+        width: 70px;
+        height: 70px;
+      }
+
+      @include onDesktop {
+        width: 70px;
+        height: 70px;
+      }
     }
   }
 }
