--- a/src/styles/galery.scss
+++ b/src/styles/galery.scss
@@ -48,6 +48,10 @@
   }
 
   &__item {
+    &:hover {
+      transform: scale(1.03);
+    }
+
     &:first-child {
       grid-column: span 4;
     }
@@ -76,8 +80,18 @@
     }
 
     @include onDesktop {
-      width: auto;
+      width: 100%;
       height: auto;
+    }
+
+    &--last {
+      margin-right: 20px;
+      @include onTablet {
+        margin-right: 34px;
+      }
+      @include onDesktop {
+        margin-right: 0;
+      }
     }
   }
 
