--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -46,13 +46,26 @@
     display: flex;
     gap: 28px;
     margin-bottom: 24px;
+    @include onDesktop {
+      gap: 20px;
+    }
   }
 
+  &__footer-block {
+    display: flex;
+    flex-direction: column;
+  }
+  
   &__link {
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 16px;
+    line-height: 16px;
     text-decoration: none;
     color: #fff;
+
+    @include onDesktop {
+      font-size: 22px;
+      line-height: 22px;
+    }
   }
 
   &__grafic {
