--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -4,12 +4,12 @@
   background-position: center;
 
   &__container {
-    padding: 88px 0;
+    padding: 88px 20px;
     @include onTablet {
-      padding: 82px 0;
+      padding: 82px 154px;
     }
     @include onDesktop {
-      padding: 163px 0;
+      padding: 163px 355px;
     }
   }
 
@@ -47,14 +47,35 @@
   &__email-form {
     @include dimensions(50px, 280px);
     box-sizing: border-box;
+    padding-left: 22px;
 
     &::placeholder {
-      padding-left: 24px;
+      color: #687480;
+      font-family: "Monserrat", monospace;
+      font-size: 14px;
+      line-height: 14px;
+      font-weight: 400;
+      &:hover {
+        color: #292929;
+      }
+    }
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.3);
     }
   }
 
   &__button {
     @include dimensions(50px, 50px);
     background-color: #f14a27;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.03);
+    }
+    &:active {
+      background-color: #f14a;
+    }
   }
 }
