--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  color: #0f0e08;
 
   &__tab-block {
     margin: 20px 50px 20px 70px;
@@ -57,6 +58,11 @@
   }
   &__net {
     @include dimensions(24px, 24px);
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.3);
+    }
   }
   &__content {
     display: flex;
@@ -70,6 +76,10 @@
       border-bottom: 0;
       margin-bottom: 0;
     }
+  }
+
+  &__grafic {
+    min-width: 130px;
   }
 
   &__list {
