--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -10,6 +10,7 @@
   }
 
   &__menu {
+    z-index: 10;
     position: fixed;
     top: 0;
     left: 0;
@@ -28,6 +29,21 @@
   }
 }
 
+.page-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 5;
+}
+
 .page:has(.page__menu:target) {
   overflow: hidden;
+
+  .page-overlay {
+    display: block;
+  }
 }
