Corrections are made

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -77,6 +77,25 @@
       text-align: left;
     }
 
+    &--contacts {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 16px;
+
+      @include onMobile {
+        margin-top: 88px;
+        margin-bottom: 20px;
+      }
+
+      @include onTablet {
+        margin-top: 82px;
+      }
+
+      @include onDesktop {
+        margin-top: 163px;
+      }
+    }
+
     &--gallery {
       @include onMobile {
         text-align: center;
@@ -88,16 +107,6 @@
 
       @include onDesktop {
         text-align: left;
-      }
-    }
-
-    &--contacts {
-      text-align: center;
-      color: #fff;
-      margin-bottom: 16px;
-
-      @include onMobile {
-        margin-bottom: 20px;
       }
     }
   }
