--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -5,17 +5,21 @@
   background-repeat: no-repeat;
   height: 550px;
 
+  @include onMobile {
+    height: 386px;
+  }
+
   @include onTablet {
     height: 380px;
   }
 
-  &__block {
-    padding: 163px 0;
+  @include onDesktop {
+    height: 550px;
+  }
 
-    @include onTablet {
-      padding: 82px 0;
-    }
-    // margin: 0 auto;
+  &__form {
+    display: flex;
+    justify-content: space-between;
   }
 
   &__text {
@@ -51,14 +55,15 @@
     }
 
     @include onDesktop {
-      justify-content: space-between;
+      justify-content: left;
+      gap: 30px;
     }
   }
 
   &__form-field {
     box-sizing: border-box;
     height: 70px;
-    width: 470px;
+    width: 100%;
     padding: 28px 32px;
     color: $c-grey-text;
     // max-width: min-content;
@@ -70,6 +75,7 @@
     border-width: 0;
 
     @include onMobile {
+      display: inline-block;
       width: 230px;
       height: 50px;
       padding: 18px 24px;
@@ -81,7 +87,7 @@
     }
 
     @include onDesktop {
-      width: 470px;
+      width: 100%;
       height: 70px;
     }
   }
