--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -37,7 +37,7 @@
   }
 
   &__button {
-    display: block;
+    display: inline-block;
     box-sizing: border-box;
     height: 50px;
     width: 50px;
@@ -51,13 +51,16 @@
     @include hover(scale, 105%);
 
     @include onMobile {
+      display: inline-block;
       width: 50px;
       height: 50px;
+      border: 0;
     }
 
     @include onTablet {
       width: 70px;
       height: 70px;
+      margin-left: 16px;
     }
 
     @include onDesktop {
