--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -136,6 +136,11 @@
     font-weight: 400;
     text-decoration: none;
     color: #0f0e08;
+    transition: font-size 0.3s ease;
+
+    &:hover {
+      font-size: 16px;
+    }
   }
 
   &__subtitle {
