--- a/src/styles/actual-events.scss
+++ b/src/styles/actual-events.scss
@@ -46,7 +46,7 @@
 
     @include onDesktop {
       @include dimensions(520px, 670px);
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 
@@ -77,7 +77,7 @@
     text-transform: uppercase;
     font-size: 16px;
     line-height: 16px;
-    color:#687480;
+    color: #687480;
 
     @include onTablet {
       font-size: 14px;
@@ -202,4 +202,3 @@
     }
   }
 }
-
