--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,10 +24,14 @@
     background-position: center;
     width: 100%;
     height: 300px;
+
     @include onTablet {
       height: 384px;
     }
 
+    @include onDesktop {
+      height: 655px;
+    }
   }
   &__menu-logo {
     position: absolute;
@@ -79,15 +83,28 @@
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 45px;
-    text-align: center;
     text-transform: uppercase;
+    text-align: center;
+    padding-bottom: 20px;
 
     @include onTablet {
       text-align: left;
+      font-size: 54px;
+      line-height: 64px;
+      padding-bottom: 38px;
+      margin: 0;
+    }
+    @include onDesktop {
+      font-size: 72px;
+      line-height: 88px;
+      padding-bottom: 90px;
+      margin: auto;
     }
   }
   &__button {
     display: flex;
+
+    justify-content: right;
     text-align: center;
     background: none;
     color: inherit;
@@ -97,6 +114,12 @@
     transition: transform 0.3s ease;
     &:hover {
       transform: scale(1.03);
+    }
+    @include onTablet {
+      margin: 0;
+    }
+    @include onDesktop {
+      margin-left: auto;
     }
   }
 
