--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -55,12 +55,17 @@
     display: flex;
     flex-direction: column;
   }
-  
+
   &__link {
     font-size: 16px;
     line-height: 16px;
     text-decoration: none;
     color: #fff;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.3);
+    }
 
     @include onDesktop {
       font-size: 22px;
