--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,14 @@
   flex-direction: column;
   min-width: 320px;
 
+  @include onTablet {
+    min-width: 750px;
+  }
+
+  @include onDesktop {
+    min-width: 1180px;
+  }
+
   &:has(.page__menu:target) {
     overflow: hidden;
   }
