--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -80,6 +80,7 @@
     cursor: pointer;
     background-color: $white;
     padding-left: 24px;
+    outline: none;
 
     @include onTablet {
       width: 350px;
