--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,6 +2,8 @@
   @include pageGrid;
   @include contentPaddingInLine;
 
+  column-gap: unset !important;
+
   &__logo {
     display: block;
     cursor: pointer;
@@ -112,7 +114,6 @@
       font-style: normal;
       font-weight: 400;
       line-height: 150%; /* 21px */
-      white-space: nowrap;
 
       &:hover {
         text-decoration: underline;
@@ -252,9 +253,9 @@
 
     &__text {
       margin: 0;
+      text-align: center;
 
       color: #0f0e08;
-      text-align: center;
       font-family: "IBM Plex Sans", sans-serif;
       font-size: 12px;
       font-style: normal;
