new handmade slider for gallery in 320px

--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -142,3 +142,15 @@ input {
 a {
   display: block;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 1000px #fff inset;
+}
