--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 
   @include forTablet() {
     grid-column: 1 / 4;
@@ -24,6 +25,11 @@
       width: 270px;
       height: 70px;
     }
+
+    &:hover {
+      box-shadow: 1px 4px 16px rgba(52, 87, 58, 0.4);
+      transform: scale(1.02);
+    }
   }
 
   &--red {
@@ -33,6 +39,17 @@
 
     @include forTablet() {
       height: 70px;
+    }
+
+    &:hover {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+      transform: scale(1.02);
+    }
+
+    &:active {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
+      transform: scale(1.02);
+      border: 0;
     }
   }
 
