--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,11 +1,11 @@
+@use "./utils/_mixins.scss" as *;
+
 .gallery {
-  display: grid;
-  grid-template-columns: 1fr;
   margin-bottom: 100px;
 
   &__picture {
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     object-fit: cover;
   }
 }
