--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,6 @@
 @import "./blocks/picture.scss";
 @import "./blocks/separator.scss";
 @import "./blocks/gallery.scss";
-@import "./blocks/swiper.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/contact-us.scss";
 @import "./blocks/opening.scss";
@@ -24,3 +23,4 @@
 @import "./blocks/menu.scss";
 @import "./blocks/upward.scss";
 @import "./blocks/smth.scss";
+@import "./blocks/slider.scss";
