--- a/src/styles/bloks/fourth.block.scss
+++ b/src/styles/bloks/fourth.block.scss
@@ -125,6 +125,14 @@
       height: 70px;
       padding: 0;
     }
+
+    &:hover {
+      background-color: #af3419;
+    }
+
+    &:active {
+      background-color: #ea340d;
+    }
   }
 
   .button__arrow {
