--- a/src/styles/bloks/header.scss
+++ b/src/styles/bloks/header.scss
@@ -1,11 +1,10 @@
 .header {
-
   @include onPhone {
     display: grid;
     grid-template-columns: repeat(2, 130px);
     justify-content: center;
     gap: 20px;
-    margin: 0 0 70px 20px;
+    margin: 0 0 70px;
   }
 
   @include onTablet {
@@ -13,7 +12,7 @@
     grid-template-columns: repeat(6, 90px);
     justify-content: center;
     gap: 30px;
-    margin: 0 0 133px;
+    margin: 0 39px 133px;
   }
 
   @include onDesctop {
@@ -32,6 +31,8 @@
   background-size: cover;
   color: red;
   font-size: 14px;
+  margin: 0;
+  padding: 0;
 
   @include onPhone {
     width: 280px;
@@ -48,7 +49,7 @@
   }
 
   @include onDesctop {
-    grid-column: 7/13;
+    grid-column: 6 /12;
     width: 725px;
     height: 655px;
   }
@@ -169,6 +170,14 @@
   border: none;
   padding: 0;
   cursor: pointer;
+
+  &:hover {
+    background-color: green;
+  }
+
+  &:active {
+    background-color: darkgreen;
+  }
 }
 
 .header__button-string {
