--- a/src/styles/bloks/menu.scss
+++ b/src/styles/bloks/menu.scss
@@ -1,11 +1,14 @@
 .menu {
+  display: flex;
+  flex-direction: column;
   margin: 0;
 }
 
 .menu__first-block {
-  width: 100%;
+  //width: 100%;
   background-color: #1a5a4c;
-  height: 233px;
+  //height: 233px;
+  height: 33%;
   margin: 0;
   padding: 0;
 
@@ -81,6 +84,7 @@
 .menu__block {
   display: flex;
   flex-direction: column;
+  transition: transform 0.3s;
 
   .menu__text {
     width: 169px;
@@ -92,6 +96,11 @@
 
     @include onTablet {
       font-size: 16px;
+    }
+
+    &:hover {
+      font-size: 23px;
+      transition: transform 0.3s;
     }
   }
 
@@ -236,8 +245,7 @@
 }
 
 .menu__second-block {
-  width: 100%;
   height: 422px;
-  background-color: #e5e5e5;
-  opacity: 50%;
+  background-color: gray;
+  opacity: 70%;
 }
