--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -179,7 +179,15 @@
   }
 }
 
-.footer__form {
+.footer__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #1a5a4c;
+  cursor: pointer;
 
   @include onPhone {
     grid-column: 2;
@@ -195,17 +203,9 @@
     display: none;
   }
 
-  .footer__button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid #1a5a4c;
-    cursor: pointer;
-    
-    .footer__img {
-      width: 10px;
-      height: 12px;
-    }
+  .footer__img {
+    width: 16px;
+    height: 16px;
   }
 }
 
@@ -279,6 +279,11 @@
 
   .footer__text {
     font-family: "IBM Plex Sans", Helvetica, sans-serif;
+    font-size: 14px;
+
+    &:hover {
+      font-size: 16px;
+    }
   }
 }
 
