--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -9,6 +9,10 @@
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
+
+  @include forTablet() {
+    max-height: 543px;
+  }
 }
 
 .mySlides {
@@ -19,7 +23,7 @@
   cursor: pointer;
   height: 9px;
   width: 9px;
-  margin: 30px 5px 0px;
+  margin: 30px 5px 0;
   background-color: #e0e0e0;
   border-radius: 50%;
   display: inline-block;
@@ -41,6 +45,10 @@
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
