--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,10 +2,24 @@
 
 .gallery {
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
 
   &__picture {
+    max-height: 410px;
     width: 100%;
-    max-height: 100%;
     object-fit: cover;
+
+    @include forTablet() {
+      height: 543px;
+    }
+  }
+
+  &__slider {
+    max-height: 410px;
+
+    @include forTablet() {
+      max-height: 543px;
+    }
   }
 }
