Refactor according with suggested changes

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -55,7 +55,7 @@
     }
 
     @include onDesktop {
-      justify-content: left;
+      justify-content: space-between;
       gap: 30px;
     }
   }
@@ -64,7 +64,6 @@
     box-sizing: border-box;
     height: 70px;
     width: 100%;
-    padding: 28px 32px;
     color: $c-grey-text;
     // max-width: min-content;
     font-family: Montserrat, sans-serif;
@@ -75,7 +74,7 @@
     border-width: 0;
 
     @include onMobile {
-      display: inline-block;
+      // display: inline-block;
       width: 230px;
       height: 50px;
       padding: 18px 24px;
@@ -84,11 +83,13 @@
     @include onTablet {
       width: 374px;
       height: 70px;
+      padding: 28px 24px;
     }
 
     @include onDesktop {
-      width: 100%;
+      width: 470px;
       height: 70px;
+      padding: 28px 32px;
     }
   }
 }
