--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -2,9 +2,8 @@
   box-sizing: border-box;
 
   &__event {
-
     @include onMobile {
-      margin-bottom: 88px;
+      margin-bottom: 60px;
     }
 
     @include onTablet {
@@ -17,7 +16,7 @@
 
     &--last {
       @include onMobile {
-        margin-bottom: 0;
+        margin-bottom: 30px;
       }
 
       @include onTablet {
@@ -36,12 +35,24 @@
     @include onMobile {
       width: 280px;
       height: 210px;
-      // margin-bottom: 20px;
+      margin-bottom: 24px;
+    }
+
+    @include onSmallTablet {
+      width: 90%;
+      height: 90%;
+      margin-bottom: 44px;
     }
 
     @include onTablet {
       width: 700px;
       height: 520px;
+      margin-bottom: 44px;
+    }
+
+    @include onSmallDesktop {
+      width: 90%;
+      height: 90%;
       margin-bottom: 44px;
     }
 
