--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -15,12 +15,12 @@
   &__image {
     box-sizing: border-box;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
     width: 100%;
 
-    @include onMobile {
-      height: 410px;
-    }
+    // @include onMobile {
+    //   height: 410px;
+    // }
 
     @include onTablet {
       height: 540px;
