--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -42,8 +42,36 @@
           grid-column: #{$start} / #{$end + 1};
         }
 
+        &--smallTablet-#{$start}-#{$end} {
+          @include onSmallTablet {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
+    }
+
+    @for $start from 1 through 6 {
+      @for $end from $start through 6 {
+        &--#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+
         &--tablet-#{$start}-#{$end} {
           @include onTablet {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
+    }
+
+    @for $start from 1 through 6 {
+      @for $end from $start through 6 {
+        &--#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+
+        &--smallDesktop-#{$start}-#{$end} {
+          @include onSmallDesktop {
             grid-column: #{$start} / #{$end + 1};
           }
         }
