--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -11,8 +11,20 @@
   }
 }
 
+@mixin onSmallDesktop {
+  @media (min-width: 800px) {
+    @content;
+  }
+}
+
 @mixin onTablet {
   @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onSmallTablet {
+  @media (min-width: 350px) {
     @content;
   }
 }
