--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -37,21 +37,20 @@
   }
 
   &__button {
-    display: inline-block;
+    // display: inline-block;
     box-sizing: border-box;
     height: 50px;
     width: 50px;
     border: 1px solid $c-green;
     background-color: $c-green;
-
     background-image: url(../images/arrow-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 
     @include hover(scale, 105%);
 
     @include onMobile {
-      display: inline-block;
       width: 50px;
       height: 50px;
       border: 0;
@@ -60,7 +59,6 @@
     @include onTablet {
       width: 70px;
       height: 70px;
-      margin-left: 16px;
     }
 
     @include onDesktop {
@@ -74,16 +72,19 @@
       @include onMobile {
         width: 50px;
         height: 50px;
+        border: 0;
       }
 
       @include onTablet {
         width: 70px;
         height: 70px;
+        margin-left: 16px;
       }
 
       @include onDesktop {
         width: 70px;
         height: 70px;
+        margin-left: 30px;
       }
     }
   }
